# short-url

./: Cargo.toml  README.md
src/: db.rs  default.rs  error.rs  index.rs  main.rs  new.rs  redirect.rs  url_validator.rs
static/style/: error_style.css  index_style.css  new_style.css
templates/: error.html  index.html  new.html
