[package]
name = "short-url"
version = "0.1.0"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.2"
askama = "0.8"
redis = "0.17.0"
serde = "1.0.115"
url = "2.1.1"